# Share

./: .gitignore  README.md  config.json  config.py  main.py  pyproject.toml  runtime.py  webapp.py
agents/: __init__.py  conflict.py  connection.py  deepseek.py  model_factory.py  models.py  orchestrator.py  security_audit.py  store.py  sync_tools.py
audit/: __init__.py  store.py
discovery/: udp_discovery.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
frontend/e2e/: console.spec.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  styles.css  types.ts
log/: log.md
security/: __init__.py  auth.py  pairing.py  tls.py
sync/: __init__.py  conflict.py  file_index.py  index_exchange.py  paths.py  service.py
tests/: test_stage_five.py  test_stage_four.py  test_stage_one.py  test_stage_seven.py  test_stage_six.py  test_stage_three.py  test_stage_two.py  test_web_console.py
transfer/: __init__.py  fetch.py  hash_utils.py  protocol.py  resume_state.py  tcp_client.py  tcp_server.py
