[project]
name = "share"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=48.0.0",
    "fastapi>=0.115.0",
    "langchain>=1.3.8",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "uvicorn>=0.34.0",
]
